hphp/hack/test/typecheck/array/safe_vector_array/gena_correctly_types_varray_or_darray_argument.php.like_types.exp
File "gena_correctly_types_varray_or_darray_argument.php", line 13, characters 10-72:
Invalid return type (Typing[4110])
File "gena_correctly_types_varray_or_darray_argument.php", line 12, characters 54-74:
Expected ~varray_or_darray<int> because it is an unenforceable type
File "hh_single_type_check_magic.hhi", line 5, characters 14-27:
But got darray<arraykey, ?int>
